--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "intuit-oauth": "^4.0.0"
+    "intuit-oauth": "^4.0.0",
+    "pluralize": "^8.0.0"
   },
   "jest": {
     "testEnvironment": "node"
